--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "HSM-Design/Modelica/AixLib"]
 	path = HSM-Design/Modelica/AixLib
-	url = https://github.com/RWTH-EBC/AixLib
+	url = https://github.com/RWTH-EBC/AixLib/tree/master
